# blockscout-mcp-server

./: .dockerignore  .env.example  .gitignore  AGENTS.md  API.md  Dockerfile  LICENSE  README.md  SETTLEMINT_FIXES.md  SETTLEMINT_SETUP.md  SPEC.md  TESTING.md  glama.json  pyproject.toml  pytest.ini  setup.sh  smithery.yaml  test_connection.py
.cursor/: AGENTS.md
.cursor/rules/: 000-role-and-task.mdc  010-implementation-rules.mdc  110-new-mcp-tool.mdc  120-mcp-tool-arguments.mdc  130-version-management.mdc  135-dxt-manifest-version.mdc  140-development-testing-workflow.mdc  140-tool-description.mdc  150-rest-api-implementation.mdc  160-static-content-caching.mdc  170-mcp-server-instructions-management.mdc  200-development-testing-workflow.mdc  210-unit-testing-guidelines.mdc  220-integration-testing-guidelines.mdc  230-api-route-tests.mdc  240-terminal-path-usage.mdc  300-ruff-lint-and-format.mdc  800-api-documentation-guidelines.mdc  900-rules-maintenance.mdc
.devcontainer/: devcontainer.json
.gemini/: .env.example  CUSTOMIZATION.md  GEMINI.md  changelog-generation-instructions.md  gemini.sh  settings.json  sp-customization-changelog.md  system-prompt.md
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.yaml  feature_request.yaml  prompt_failure.yaml
.github/workflows/: ci-lint.yml  ci.yml  integration-tests.yml  main.yml
blockscout_mcp_server/: __init__.py  __main__.py  analytics.py  cache.py  client_meta.py  config.py  constants.py  llms.txt  logging_utils.py  models.py  server.py  web3_pool.py
blockscout_mcp_server/api/: dependencies.py  helpers.py  routes.py
blockscout_mcp_server/templates/: index.html
blockscout_mcp_server/tools/: __init__.py  address_tools.py  block_tools.py  chains_tools.py  common.py  contract_tools.py  decorators.py  ens_tools.py  get_instructions.py  initialization_tools.py  search_tools.py  transaction_tools.py
dxt/: README.md  build.sh  manifest-dev.json  manifest.json
gpt/: README.md  action_tool_descriptions.md  instructions.md  openapi.yaml
tests/: conftest.py  test_analytics.py  test_analytics_helpers.py  test_analytics_source.py  test_cache.py  test_client_meta.py  test_logging_utils.py  test_models.py  test_server.py  test_web3_pool.py
tests/api/: test_routes.py
tests/evals/: GEMINI-evals.md  GEMINI.md  README.md  docker-compose.yml  evals.sh
tests/integration/: Web3PyTestContract.sol  __init__.py  helpers.py  test_common_helpers.py  (+9 more)
(+24 files in other folders)
