[project]
name = "blockscout-mcp-server"
version = "0.1.0"
description = "MCP server for Blockscout"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.9.2",  # Or the latest version of the SDK
    "httpx>=0.27.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0"
]

[project.scripts]
blockscout-mcp-server = "blockscout_mcp_server.server:run_server_cli" # For CLI entry

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["blockscout_mcp_server"]
