[project]
name = "blockscout-mcp-server"
version = "0.1.0"
description = "MCP server for Blockscout"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.9.2",  # Or the latest version of the SDK
    "httpx>=0.27.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "anyio>=4.0.0",  # For async task management and progress reporting,
    "uvicorn>=0.23.1"  # For HTTP Streamable mode
]

[project.scripts]
blockscout-mcp-server = "blockscout_mcp_server.server:run_server_cli" # For CLI entry

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["blockscout_mcp_server"]
